<resources>
    <string name="app_name" translatable="false">RepuestosConejo</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_contra">Contraseña</string>
    <string name="tv_registro">Registrarse</string>
    <string name="tv_loguearse">Loguearse</string>
    <string name="selectedlanguage">Español</string>
    <string name="change_language">Cambiar idioma</string>


    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_repuestos_conejo">Home</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_repuestos">Repuestos</string>
    <string name="menu_vehiculos">Vehiculos</string>
    <string name="menu_idioma">Cambiar Idioma</string>
    <string name="menu_mapa">Contactenos</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCYYzp5vcrUwJ0mTbL9NBuNH8JnxWqe4AM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_no_puedes">Si no posees una cuenta</string>
    <string name="registrate">Registrate</string>
    <string name="ingresar">Ingresar</string>

    <string name="msg_nombre">Nombre del Repuesto</string>
    <string name="msg_correo">Email (correo@xxx.xxx)</string>
    <string name="msg_telefono">Teléfono(9999–9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_add_pedido">Agregar pedido</string>
    <string name="bt_save_pedido">Guardar pedido</string>
    <string name="pedido_nombre">Nombre</string>
    <string name="pedido_primerapellido">Primer Apellido</string>
    <string name="pedido_segundoapellido">Segundo Apellido</string>
    <string name="pedido_direccion">Direccion</string>
    <string name="pedido_precio">Precio</string>
    <string name="pedido_fecha">Fecha</string>
    <string name="bt_add_vehiculo">Agregar vehiculo</string>
    <string name="vehiculo_marca">Marca</string>
    <string name="vehiculo_motor">Motor</string>
    <string name="vehiculo_ano">Año</string>
    <string name="vehiculo_modelo">Modelo</string>
    <string name="bt_guardar_vehiculo">Guardar Vehiculo</string>
    <string name="bt_add_repuesto">Agregar repuesto</string>
    <string name="repuesto_nombre">Nombre</string>
    <string name="repuesto_descripcion">Descripcion</string>
    <string name="repuesto_precio">Precio</string>
    <string name="repuesto_cantidad">Cantidad</string>
    <string name="save_repuesto">Guardar repuesto</string>
    <string name="msg_vehiculo_added">Vehiculo agregado…</string>
    <string name="msg_repuesto_added">Repuesto agregado…</string>
    <string name="msg_pedido_added">Pedido agregado…</string>
    <string name="bt_update_pedido">Actualizar pedido…</string>
    <string name="bt_update_vehiculo">Actualizar vehiculo…</string>
    <string name="bt_update_repuesto">Actualizar repuesto…</string>
    <string name="msg_pedido_update">Pedido actualizado…</string>
    <string name="msg_vehiculo_update">Vehiculo actualizado…</string>
    <string name="msg_repuesto_update">Repuesto actualizado…</string>
    <string name="msg_data">Faltan Datos</string>

    <string name="bt_delete_repuestos">Eliminar repuesto…</string>
    <string name="msg_repuestos_delete">Repuesto eliminado…</string>
    <string name="msg_preguta_eliminar">¿Esta seguro de eliminar el repuesto?</string>
    <string name="msg_sir">Si repuesto</string>
    <string name="msg_nor">No repuesto</string>

    <string name="bt_delete_pedidos">Eliminar pedido…</string>
    <string name="msg_pedidos_delete">Pedido eliminado…</string>
    <string name="msg_preguta_eliminar_pedidos">¿Esta seguro de eliminar el pedido?</string>
    <string name="msg_sip">Si pedido</string>
    <string name="msg_nop">No pedido</string>

    <string name="bt_delete_vehiculos">Eliminar vehiculo…</string>
    <string name="msg_vehiculos_delete">Vehiculo eliminado…</string>
    <string name="msg_preguta_eliminar_vehiculos">¿Esta seguro de eliminar el vehiculo?</string>
    <string name="msg_siv">Si vehiculo</string>
    <string name="msg_nov">No vehiculo</string>

    <string name="default_web_client_id_r" translatable="false">139722716035-3s93q7u2e50bl9l5pbtvpcc3bghg5ih3.apps.googleusercontent.com</string>

</resources>