<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_repuestos"
            android:icon="@drawable/ic_repuestos"
            android:title="@string/menu_repuestos" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_vehiculos"
            android:icon="@drawable/ic_vehicules"
            android:title="@string/menu_vehiculos" />
      
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mapa" />
    </group>
</menu>