<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E769C"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.Repuestos.AddRepuestosFragment">

    <ImageView
        android:id="@+id/img_logo_addrep"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/logo_repuestos_conejo"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:background="#5E769E"
            android:text="@string/bt_update_repuesto"
            android:textAlignment="center"
            android:textColor="#FEFEFE"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repuesto_nombre"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_añotxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="@string/repuesto_descripcion"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="141dp"
            android:layout_height="34dp"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="192dp"
            android:layout_height="34dp"
            android:layout_marginLeft="60dp"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repuesto_precio"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/repuesto_cantidad"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="123dp"
            android:layout_height="34dp"
            android:layout_marginLeft="150dp"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_actualizar_repuesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#121111"
            android:backgroundTint="#F8F3F3"
            android:text="@string/bt_update_repuesto"
            android:textSize="24sp"
            app:iconTint="#000000"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_eliminar_repuesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#121111"
            android:backgroundTint="#F8F3F3"
            android:text="@string/bt_delete_repuestos"
            android:textSize="24sp"
            app:iconTint="#000000"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</LinearLayout>