<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E769C"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.Vehiculos.AddVehiculosFragment">

    <ImageView
        android:id="@+id/img_logo_addrep"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/logo_repuestos_conejo"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:background="#5E769E"
            android:text="@string/bt_update_vehiculo"
            android:textAlignment="center"
            android:textColor="#FEFEFE"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehiculo_modelo"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_añotxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/vehiculo_ano"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etModelo"
            android:layout_width="146dp"
            android:layout_height="match_parent"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etAño"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehiculo_marca"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/vehiculo_motor"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMarca"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etMotor"
            android:layout_width="146dp"
            android:layout_height="30dp"
            android:layout_marginLeft="100dp"
            android:background="#BDC2CA"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_actualizar_vehiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:backgroundTint="#000000"
            android:text="@string/bt_update_vehiculo"
            android:textSize="24sp"
            app:iconTint="#000000"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_eliminar_vehiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:backgroundTint="#000000"
            android:text="@string/bt_delete_vehiculos"
            android:textSize="24sp"
            app:iconTint="#000000"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</LinearLayout>